--- a/src/styles/_header.scss
+++ b/src/styles/_header.scss
@@ -1,8 +1,7 @@
 .header {
     width : 100%;
     padding : 20px 50px;
-    background-color: #7EAA92;
-    border-bottom: 2px solid white;
+    background-color: var(--primary-background-color);
     margin-bottom: 50px;
     display:flex;
 
@@ -25,7 +24,7 @@
     }
 
     a {
-        color :white;
+        color :var(--color-onglet-button);
         font-weight:500;
         text-decoration:none;
         font-size: 20px;
